[tool.poetry]
name = "manim-use-with-threading"
version = "0.1.0"
description = ""
authors = ["Karpfen <karpfen@karpfen.dev>"]
readme = "README.md"
packages = [{include = "manim_use_with_threading"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
manim = "^0.17.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
